Fetch & present Seecl data

--- a/App.razor
+++ b/App.razor
@@ -1,7 +1,10 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using MatBlazor
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        <MatPortalHost></MatPortalHost>
+        <MatToastContainer />
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
